--- a/src/components/lang/lang.css
+++ b/src/components/lang/lang.css
@@ -5,20 +5,20 @@
     padding-left: 16px;
     overflow: hidden;
     height: 32px;
-    position: absolute;
-    right: 1.0875rem;
     width: 100px;
-    top: 100px;
+    margin-bottom: 0;
+    z-index: 1;
+    min-width: 100px;
 }
 
 .overLangUiEnter 
 {
-    animation: grow 0.5s ease-out forwards;
+    animation: grow 0.4s ease-out forwards;
 }
 
 .overLangUiLeave 
 {
-    animation: toDefault 0.5s ease-out forwards;
+    animation: toDefault 0.4s ease-out forwards;
 }
 
 .langUi > li
@@ -29,13 +29,14 @@
     transition: opacity 0.35s ease-in;
 }
 
-html .hoverLangEnter 
+html .hoverLang:hover
 {
     color: "white";
     opacity: 1;
+    font-weight: bold;
 }
 
-html .hoverLangLeave 
+html .hoverLang
 {
     color: "white";
     opacity: 0.7;
