--- a/src/components/header.css
+++ b/src/components/header.css
@@ -2,41 +2,52 @@
     position: relative;
     width: 100px;
 }
+
 .can-toggle *, .can-toggle *:before, .can-toggle *:after {
     box-sizing: border-box;
 }
+
 .can-toggle input[type="checkbox"] {
     opacity: 0;
     position: absolute;
     top: 0;
     left: 0;
 }
+
 .can-toggle input[type="checkbox"][disabled] ~ label {
     pointer-events: none;
 }
+
 .can-toggle input[type="checkbox"][disabled] ~ label .can-toggle__switch {
     opacity: 0.4;
 }
+
 .can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch:before {
     content: attr(data-unchecked);
     left: 0;
 }
+
 .can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch:after {
     content: attr(data-checked);
 }
+
 .can-toggle label {
     user-select: none;
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 }
+
 .can-toggle label .can-toggle__label-text {
     flex: 1;
     padding-left: 32px;
 }
+
 .can-toggle label .can-toggle__switch {
     position: relative;
 }
+
 .can-toggle label .can-toggle__switch:before {
     content: attr(data-checked);
     position: absolute;
@@ -44,6 +55,7 @@
     text-transform: uppercase;
     text-align: center;
 }
+
 .can-toggle label .can-toggle__switch:after {
     content: attr(data-unchecked);
     position: absolute;
@@ -53,65 +65,84 @@
     background: white;
     transform: translate3d(0, 0, 0);
 }
+
 .can-toggle input[type="checkbox"][disabled] ~ label {
     color: rgba(119, 119, 119, 0.5);
 }
+
 .can-toggle input[type="checkbox"]:focus ~ label .can-toggle__switch, .can-toggle input[type="checkbox"]:hover ~ label .can-toggle__switch {
     background-color: #777;
 }
+
 .can-toggle input[type="checkbox"]:focus ~ label .can-toggle__switch:after, .can-toggle input[type="checkbox"]:hover ~ label .can-toggle__switch:after {
     color: #5e5e5e;
 }
+
 .can-toggle input[type="checkbox"]:hover ~ label {
     color: #6a6a6a;
 }
+
 .can-toggle input[type="checkbox"]:checked ~ label:hover {
     color: #55bc49;
 }
+
 .can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch {
     background-color: #70c767;
 }
+
 .can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch:after {
     color: #4fb743;
 }
+
 .can-toggle input[type="checkbox"]:checked:focus ~ label .can-toggle__switch, .can-toggle input[type="checkbox"]:checked:hover ~ label .can-toggle__switch {
     background-color: #5fc054;
 }
+
 .can-toggle input[type="checkbox"]:checked:focus ~ label .can-toggle__switch:after, .can-toggle input[type="checkbox"]:checked:hover ~ label .can-toggle__switch:after {
     color: #47a43d;
 }
+
 .can-toggle label .can-toggle__label-text {
     flex: 1;
 }
+
 .can-toggle label .can-toggle__switch {
     transition: background-color 0.3s cubic-bezier(0, 1, 0.5, 1);
     background: #848484;
 }
+
 .can-toggle label .can-toggle__switch:before {
     color: rgba(255, 255, 255, 0.5);
 }
+
 .can-toggle label .can-toggle__switch:after {
     -webkit-transition: -webkit-transform 0.3s cubic-bezier(0, 1, 0.5, 1);
     transition: transform 0.3s cubic-bezier(0, 1, 0.5, 1);
     color: #777;
 }
+
 .can-toggle input[type="checkbox"]:focus ~ label .can-toggle__switch:after, .can-toggle input[type="checkbox"]:hover ~ label .can-toggle__switch:after {
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
 }
+
 .can-toggle input[type="checkbox"]:checked ~ label .can-toggle__switch:after {
     transform: translate3d(65px, 0, 0);
 }
+
 .can-toggle input[type="checkbox"]:checked:focus ~ label .can-toggle__switch:after, .can-toggle input[type="checkbox"]:checked:hover ~ label .can-toggle__switch:after {
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
 }
+
 .can-toggle label {
     font-size: 14px;
 }
+
 .can-toggle label .can-toggle__switch {
     height: 36px;
     flex: 0 0 134px;
     border-radius: 4px;
 }
+
 .can-toggle label .can-toggle__switch:before {
     left: 67px;
     font-size: 12px;
@@ -119,6 +150,7 @@
     width: 67px;
     padding: 0 12px;
 }
+
 .can-toggle label .can-toggle__switch:after {
     top: 2px;
     left: 2px;
@@ -127,68 +159,88 @@
     line-height: 32px;
     font-size: 12px;
 }
+
 .can-toggle label .can-toggle__switch:hover:after {
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"][disabled] ~ label {
     color: rgba(68, 68, 68, 0.5);
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:focus ~ label .can-toggle__switch, .can-toggle.demo-rebrand-2 input[type="checkbox"]:hover ~ label .can-toggle__switch {
     background-color: #444;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:focus ~ label .can-toggle__switch:after, .can-toggle.demo-rebrand-2 input[type="checkbox"]:hover ~ label .can-toggle__switch:after {
     color: #2b2b2b;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:hover ~ label {
     color: #373737;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked ~ label:hover {
     color: #62b125;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked ~ label .can-toggle__switch {
     background-color: #75d32d;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked ~ label .can-toggle__switch:after {
     color: #5da924;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked:focus ~ label .can-toggle__switch, .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked:hover ~ label .can-toggle__switch {
     background-color: #69be28;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked:focus ~ label .can-toggle__switch:after, .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked:hover ~ label .can-toggle__switch:after {
     color: #52941f;
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__label-text {
     flex: 1;
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__switch {
     transition: background-color 0.3s cubic-bezier(0.86, 0, 0.07, 1);
     background: #515151;
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__switch:before {
     color: rgba(255, 255, 255, 0.7);
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__switch:after {
     -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
     transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
     color: #444;
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:focus ~ label .can-toggle__switch:after, .can-toggle.demo-rebrand-2 input[type="checkbox"]:hover ~ label .can-toggle__switch:after {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked ~ label .can-toggle__switch:after {
     transform: translate3d(35px, 0, 0);
 }
+
 .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked:focus ~ label .can-toggle__switch:after, .can-toggle.demo-rebrand-2 input[type="checkbox"]:checked:hover ~ label .can-toggle__switch:after {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
 }
+
 .can-toggle.demo-rebrand-2 label {
     font-size: 13px;
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__switch {
     height: 35px;
     flex: 0 0 70px;
     border-radius: 35px;
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__switch:before {
     left: 35px;
     font-size: 13px;
@@ -196,6 +248,7 @@
     width: 35px;
     padding: 0 12px;
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__switch:after {
     top: 2px;
     left: 2px;
@@ -204,6 +257,7 @@
     line-height: 31px;
     font-size: 13px;
 }
+
 .can-toggle.demo-rebrand-2 label .can-toggle__switch:hover:after {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
 }
