--- a/src/components/lang/lang.css
+++ b/src/components/lang/lang.css
@@ -1,54 +1,91 @@
-.langUi
-{
+.containerUL {
+    height: 100%;
+    z-index: 10;
+}
+
+.langUi {
     list-style-type: none;
-    border-left: 4px solid #2196F3;
-    padding-left: 16px;
+    border-right: 4px solid #2196F3;
     overflow: hidden;
-    height: 2rem;
+    height: 0rem;
     width: 100px;
     margin-bottom: 0;
     z-index: 10;
     min-width: 100px;
+    transition: height 0.4s;
 }
 
-.overLangUiEnter 
-{
-    animation: grow 0.4s ease-out forwards;
+html .containerUL:hover .langUi {
+    overflow: unset;
+    height: calc(100% - 2rem);
+    overflow: auto;
+    border-right: 4px solid #74d32c;
 }
 
-.overLangUiLeave 
-{
-    animation: toDefault 0.4s ease-out forwards;
-}
-
-.langUi > li
-{
-    color: "white";
+.langUi > li {
     opacity: 0.8;
-    height: 25px;
-    transition: opacity 0.35s ease-in;
+    height: 2rem;
+    transition: opacity 0.35s;
+    scroll-snap-align: start;
 }
 
-html .hoverLang:hover
-{
-    color: "white";
-    opacity: 1;
-    font-weight: bold;
-}
-
-html .hoverLang
-{
-    color: "white";
+html .hoverLang {
     opacity: 0.7;
+    transition: box-shadow 0.35s;
+    margin: 0 0.5rem 0 0;
+    padding: 0 0.5rem;
+    display: flex;
+    align-items: center;
 }
 
-@keyframes grow 
-{
-    from {overflow: hidden;height: 2rem; border-left: 4px solid #2196F3;}
-    to{ overflow: unset;height: 5rem; border-left: 4px solid #74d32c;}
+html .hoverLang:hover {
+    opacity: 1;
+    box-shadow: inset 0px -10px #75d32d6b;
+    font-weight: 600;
 }
-@keyframes toDefault 
-{
-    from{ overflow: unset;height: 5rem; border-left: 4px solid #74d32c;}
-    to {overflow: hidden;height: 2rem; border-left: 4px solid #2196F3;}
+
+html .activeUl {
+    opacity: 1;
+    font-weight: bolder;
+    box-shadow: inset 0px 2rem #2196F3;
+    transition: box-shadow 0.35s;
+    margin: 0;
+    padding: 0 0.5rem;
+    display: flex;
+    align-items: center;
+    height: 2rem;
 }
+
+/*.overLangUiEnter {*/
+/*    animation: grow 0.4s ease-out forwards;*/
+/*}*/
+
+/*.overLangUiLeave {*/
+/*    animation: toDefault 0.4s ease-out forwards;*/
+/*}*/
+
+/*@keyframes grow {*/
+/*    from {*/
+/*        overflow: hidden;*/
+/*        height: 2rem;*/
+/*        border-right: 4px solid #2196F3;*/
+/*    }*/
+/*    to {*/
+/*        overflow: unset;*/
+/*        height: 4rem;*/
+/*        border-right: 4px solid #74d32c;*/
+/*    }*/
+/*}*/
+
+/*@keyframes toDefault {*/
+/*    from {*/
+/*        overflow: unset;*/
+/*        height: 4rem;*/
+/*        border-right: 4px solid #74d32c;*/
+/*    }*/
+/*    to {*/
+/*        overflow: hidden;*/
+/*        height: 2rem;*/
+/*        border-right: 4px solid #2196F3;*/
+/*    }*/
+/*}*/
